- Aurora 0.2b support added - Target free space checking (UNFINISHED)

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -229,6 +229,7 @@
     <Compile Include="Database\QueryBuilder.cs" />
     <Compile Include="Interfaces\IDialog.cs" />
     <Compile Include="Interfaces\ILoginViewModel.cs" />
+    <Compile Include="Models\TransferInitializationResult.cs" />
     <Compile Include="Models\UnityItem.cs" />
     <Compile Include="Models\UnityResponse.cs" />
     <Compile Include="ViewModels\DialogViewModelBase.cs" />
