--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Neurotoxin.Godspeed.Shell.csproj
@@ -54,6 +54,9 @@
     <ApplicationIcon>Resources\app.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup />
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Fizzler">
       <HintPath>..\packages\Fizzler.0.9.3\lib\net35\Fizzler.dll</HintPath>
