- FileSystemItem context menu addition - FATX 42 filename length limit check - Issue #513, #514, #516 updates

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Presentation/Neurotoxin.Godspeed.Presentation.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Converters\StringFormatter.cs" />
     <Compile Include="Converters\ViewIconConverter.cs" />
     <Compile Include="Events\ActivateModuleContextEvent.cs" />
+    <Compile Include="Events\CancelableEventArgs.cs" />
     <Compile Include="Events\DisposedEvent.cs" />
     <Compile Include="Events\ErrorCheckedEvent.cs" />
     <Compile Include="Events\EventArgsBase.cs" />
